--- a/TPC_06-09_vinyl/service/package.json
+++ b/TPC_06-09_vinyl/service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aula13-service",
+  "name": "service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "urllib": "^2.36.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "jest": "^26.6.3"
   }
 }
