--- a/TP1/COVIDA/package.json
+++ b/TP1/COVIDA/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "urllib": "^2.36.1"
